<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LectorQr">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_lector_qr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/name_lector_qr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="name"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/surface_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" />
        <EditText
            android:id="@+id/surname_lector_qr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="surname"
            app:layout_constraintTop_toBottomOf="@id/name_lector_qr"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/id_number_lector_qr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="id number"
            app:layout_constraintTop_toBottomOf="@id/surname_lector_qr"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>
        <EditText
            android:id="@+id/birthday_lector_qr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="birthday"
            app:layout_constraintTop_toBottomOf="@id/id_number_lector_qr"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bu_save_data"
            android:src="@drawable/ic_baseline_save_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="40dp"/>









    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>